@@ -2,6 +2,7 @@ Revision history for Config-MVP-Writer-INI
 
 {{$NEXT}}
 
+  - Document 'spacing' attribute
   - Be more lenient in how sections are specified
   - Fix formatting bugs producing too many newlines
   - More tests
